--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
   font-family: sans-serif;
 }
 
-nav {
-  background-color: rgba(123, 198, 199, 0.8);
+div {
+  background-color: rgba(126, 204, 206, 0.8);
 }
 
 .menu {
@@ -13,6 +13,7 @@ nav {
   list-style: none;           
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 .menu li a {
@@ -24,5 +25,5 @@ nav {
 }
 
 .menu li a:hover {
-  background-color: rgba(123, 198, 199, 1);
+  background-color: rgb(107, 217, 221);
 }
